| Summary: | ASTERISK-26672: Crash when setting remote address on RTP instance | ||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |
| Date Opened: | 2016-12-22 11:56:43.000-0600 | Date Closed: | 2017-01-04 22:07:25.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_rtp Resources/res_rtp_asterisk |
| Versions: | 13.13.1 | Frequency of Occurrence | Occasional |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) originate-hangup-backtrace_10725.txt ( 1) static_host-backtrace_13772.txt | |
| Description: | During internal testing we had a crash when Asterisk was trying to set the remote RTP address. As it turned out the crash was because the code was manipulating an uninitialized IP address structure after failing to setup a socket.
The attached backtraces show us trying to copy the uninitialized 'us' address structure from ast_rtp_remote_address_set() in ast_sockaddr_copy(). | ||
| Comments: | By: Friendly Automation (friendly-automation) 2017-01-04 22:07:26.780-0600 Change 4655 merged by George Joseph: acl.c: Improve ast_ouraddrfor() diagnostic messages. [https://gerrit.asterisk.org/4655|https://gerrit.asterisk.org/4655] By: Friendly Automation (friendly-automation) 2017-01-04 22:07:41.490-0600 Change 4659 merged by George Joseph: acl.c: Improve ast_ouraddrfor() diagnostic messages. [https://gerrit.asterisk.org/4659|https://gerrit.asterisk.org/4659] By: Friendly Automation (friendly-automation) 2017-01-04 22:10:08.397-0600 Change 4663 merged by George Joseph: acl.c: Improve ast_ouraddrfor() diagnostic messages. [https://gerrit.asterisk.org/4663|https://gerrit.asterisk.org/4663] By: Friendly Automation (friendly-automation) 2017-01-04 22:10:21.710-0600 Change 4667 merged by George Joseph: acl.c: Improve ast_ouraddrfor() diagnostic messages. [https://gerrit.asterisk.org/4667|https://gerrit.asterisk.org/4667] By: Friendly Automation (friendly-automation) 2017-01-06 10:24:39.588-0600 Change 4656 merged by zuul: res_rtp_asterisk.c: Initialize ourip passed to ast_find_ourip(). [https://gerrit.asterisk.org/4656|https://gerrit.asterisk.org/4656] By: Friendly Automation (friendly-automation) 2017-01-06 13:16:55.025-0600 Change 4668 merged by zuul: res_rtp_asterisk.c: Initialize ourip passed to ast_find_ourip(). [https://gerrit.asterisk.org/4668|https://gerrit.asterisk.org/4668] By: Friendly Automation (friendly-automation) 2017-01-06 13:51:47.971-0600 Change 4660 merged by zuul: res_rtp_asterisk.c: Initialize ourip passed to ast_find_ourip(). [https://gerrit.asterisk.org/4660|https://gerrit.asterisk.org/4660] By: Friendly Automation (friendly-automation) 2017-01-06 13:51:51.219-0600 Change 4661 merged by zuul: chan_rtp.c: Fix uninitialized memory crash. [https://gerrit.asterisk.org/4661|https://gerrit.asterisk.org/4661] By: Friendly Automation (friendly-automation) 2017-01-06 14:05:20.944-0600 Change 4662 merged by zuul: res_rtp_asterisk.c: Fix uninitialized memory crash. [https://gerrit.asterisk.org/4662|https://gerrit.asterisk.org/4662] By: Friendly Automation (friendly-automation) 2017-01-09 07:22:20.292-0600 Change 4669 merged by Joshua Colp: chan_rtp.c: Fix uninitialized memory crash. [https://gerrit.asterisk.org/4669|https://gerrit.asterisk.org/4669] By: Friendly Automation (friendly-automation) 2017-01-09 07:22:59.139-0600 Change 4670 merged by Joshua Colp: res_rtp_asterisk.c: Fix uninitialized memory crash. [https://gerrit.asterisk.org/4670|https://gerrit.asterisk.org/4670] By: Friendly Automation (friendly-automation) 2017-01-09 07:23:06.028-0600 Change 4657 merged by Joshua Colp: chan_rtp.c: Fix uninitialized memory crash. [https://gerrit.asterisk.org/4657|https://gerrit.asterisk.org/4657] By: Friendly Automation (friendly-automation) 2017-01-09 07:23:08.879-0600 Change 4658 merged by Joshua Colp: res_rtp_asterisk.c: Fix uninitialized memory crash. [https://gerrit.asterisk.org/4658|https://gerrit.asterisk.org/4658] By: Friendly Automation (friendly-automation) 2017-01-09 07:23:29.674-0600 Change 4664 merged by Joshua Colp: res_rtp_asterisk.c: Initialize ourip passed to ast_find_ourip(). [https://gerrit.asterisk.org/4664|https://gerrit.asterisk.org/4664] By: Friendly Automation (friendly-automation) 2017-01-09 07:23:31.384-0600 Change 4665 merged by Joshua Colp: chan_rtp.c: Fix uninitialized memory crash. [https://gerrit.asterisk.org/4665|https://gerrit.asterisk.org/4665] By: Friendly Automation (friendly-automation) 2017-01-09 07:23:33.264-0600 Change 4666 merged by Joshua Colp: res_rtp_asterisk.c: Fix uninitialized memory crash. [https://gerrit.asterisk.org/4666|https://gerrit.asterisk.org/4666] | ||